# NBTEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nbteditor.pro
resources/: lang_de.qm  lang_de.ts  logo-template.old.xcf  logo-template.xcf  nbt-template.xcf  nbteditor.rc  resources.qrc
src/: Globals.h  Version.h.in  main.cpp
src/Exception/: Exception.h  FileException.h  GzipException.h  NBTException.h  StreamOverflowException.h
src/File/: ByteBuffer.cpp  ByteBuffer.h  ByteReader.h  ByteWriter.h  FileByteWriter.cpp  FileByteWriter.h  GzipByteReader.cpp  GzipByteReader.h  GzipByteWriter.cpp  GzipByteWriter.h  MemoryByteReader.cpp  MemoryByteReader.h  MemoryByteWriter.cpp  MemoryByteWriter.h  WriteBuffer.cpp  WriteBuffer.h
src/NBT/: NBTCompound.cpp  NBTCompound.h  NBTEntry.cpp  NBTEntry.h  NBTHelper.cpp  NBTHelper.h  NBTReader.cpp  NBTReader.h  NBTTag.h  NBTType.h
src/UI/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddElementDialog.cpp  AddElementDialog.h  AddElementDialog.ui  EditArrayDialog.cpp  EditArrayDialog.h  EditArrayDialog.ui  MainForm.cpp  MainForm.h  MainForm.ui  NBTTreeItem.h  NBTTreeModel.cpp  NBTTreeModel.h  TreeContextMenu.cpp  TreeContextMenu.h
